feat(pagination): added basic pagination comp

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link href='node_modules/@govtechsg/sgds/css/sgds.util.css' rel='stylesheet' type='text/css' /> -->
     <!-- <link href='node_modules/@govtechsg/sgds/css/sgds.css' rel='stylesheet' type='text/css' /> -->
-    <!-- <link href="https://cdn.jsdelivr.net/npm/@govtechsg/sgds@2.1.1/css/sgds.min.css" rel="stylesheet" crossorigin="anonymous"> -->
+    <link href="https://cdn.jsdelivr.net/npm/@govtechsg/sgds@2.1.1/css/sgds.min.css" rel="stylesheet" crossorigin="anonymous">
     <!-- <script type="module" id="dev-console-gateway"
         src="https://assets.developer.tech.gov.sg/bundled-scripts/dev-console-gateway.bundle.js"></script> -->
         <!-- <script src="/node_modules/@webcomponents/scoped-custom-element-registry/scoped-custom-element-registry.min.js"></script> -->
@@ -198,6 +198,12 @@
                 </sgds-badge>
             </div>
         </div>
+        <div class="container">
+            <h2>Pagination W/ Table</h2>
+            <sgds-pagination directionVariant="icon"></sgds-pagination>
+            <sgds-pagination directionVariant="icon-text"></sgds-pagination>
+            <sgds-pagination directionVariant="text"></sgds-pagination>
+            </div>
         <div class="container">
             <h2>Button</h2>
             <p>Button size</p>
