--- a/index.html
+++ b/index.html
@@ -148,7 +148,21 @@
 
     <main>
         <div class="container">
-            <sgds-combo-box placeholder='test combo box' menuList='["one", "two"]' label="label" hintText="hint" />
+            <sgds-combo-box placeholder='test combo box' menuList='["one", "two"]' label="label" hintText="hint">
+                <svg
+                    slot="icon"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="16"
+                    height="16"
+                    fill="currentColor"
+                    class="bi bi-search"
+                    viewBox="0 0 16 16"
+                >
+                    <path
+                    d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
+                    />
+                </svg>
+            </sgds-combo-box>
             <h2>Breadcrumb</h2>
             <sgds-breadcrumb>
                 <span slot="separator"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-slash-square" viewBox="0 0 16 16">
