feat(pagination): added prop ellipsisOn functionality for prev and next ellipsis

--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
         <div class="container">
             <h2>Pagination W/ Table</h2>
             <sgds-pagination directionVariant="icon"></sgds-pagination>
+            <sgds-pagination directionVariant="icon" limit="7" ellipsisOn></sgds-pagination>
             <sgds-pagination directionVariant="icon-text" ellipsisOn></sgds-pagination>
             <sgds-pagination directionVariant="text"></sgds-pagination>
             </div>
