docs(combobox): add jsdocs for sgds-input and sgds-select emitted events

--- a/index.html
+++ b/index.html
@@ -600,8 +600,12 @@
 
         const comboBox = document.querySelector('sgds-combo-box');
 
-        comboBox.addEventListener('sgds-change', (event) => {
+        comboBox.addEventListener('sgds-select', (event) => {
         console.log('Selected value changed!', event.target.value);
+        });
+
+        comboBox.addEventListener('sgds-input', (event) => {
+        console.log('Input value changed!', event.target.value);
         });
 
         
