fix(mainnav): slot end stylings to exclude mainnav-dropdown

--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@
             <sgds-dropdown-item href="#">Item 2</sgds-dropdown-item>
             <sgds-dropdown-item href="#">Item 3</sgds-dropdown-item>
           </sgds-mainnav-dropdown>
+          <sgds-mainnav-dropdown togglerText="Dropdown" slot="end" >
+            <sgds-dropdown-item href="https://google.com">Item 1</sgds-dropdown-item>
+            <sgds-dropdown-item href="#">Item 2</sgds-dropdown-item>
+            <sgds-dropdown-item href="#">Item 3</sgds-dropdown-item>
+          </sgds-mainnav-dropdown>
         <sgds-button slot="end">Login</sgds-button>
         <dev-console-widget slot="non-collapsible" iconColor="black" iconWidth="28px" iconHeight="28px">
         </dev-console-widget>
