--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
     <main>
         <div class="container">
-            <sgds-combo-box placeholder='test combo box' menuList='["one", "two"]' label="label" hintText="hint">
+            <sgds-combo-box placeholder='test combo box' menuList='["John Smith", "Jack Adams"]' label="label" hintText="hint">
                 <!-- <svg
                     slot="icon"
                     xmlns="http://www.w3.org/2000/svg"
@@ -618,7 +618,9 @@ dp.addEventListener('sgds-change-date', event => {
         comboBox.addEventListener('sgds-input', (event) => {
         console.log('Input value changed!', event.target.value);
         });
-        comboBox.filterFunction = (inputValue, menuItem) => inputValue === menuItem;
+        comboBox.filterFunction = (inputValue, menuItem) => {
+            return menuItem.includes(inputValue);
+        }
     </script>
 </body>
 
