chore(*): move ce registraton to individual folders
remove components.js endpoint in favour for subfolder endpoint

--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
         
     </style>
         <!-- <script src="https://cdn.jsdelivr.net/npm/clk-web-components" type="module"></script> -->
+        <script type="module">
+            import "@webcomponents/scoped-custom-element-registry";
+        </script>
     <script src="lib/index.js" type="module"></script>
     <script>
         const steps = [
