build(vite.config.js): migrate to vite for development
Previously, local server is set up for development using rollup build (/lib folder).

With vite, building is unnecessary until ready for production. Use vite with index.html
as entry point to start development server from pre-production code (/src folder).

'npm run dev' command modified to run 'vite' command.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             min-height: 100vh;
             flex-direction: column;
         }
+        .container {
+            display: flex;
+            flex-direction: column;
+        }
 
         sgds-footer::part(footer-bottom) {
             background-color: red;
@@ -100,7 +104,7 @@
         
     </style>
         <!-- <script src="https://cdn.jsdelivr.net/npm/clk-web-components" type="module"></script> -->
-    <script src="lib/index.js" type="module"></script>
+    <script src="src/index.ts" type="module"></script>
     <script>
         const steps = [
   { title: 1, stepHeader: "Marker title", template: `<p>Step 1 Content</p>` },
@@ -161,7 +165,7 @@
 
 
     <main>
-        <div class="cotainer">
+        <div class="container">
             <h2>Progress</h2>
             <div class="row">
                 <sgds-progress height="40">
@@ -367,7 +371,7 @@
         <div class="container">
             <h2>Alert</h2>
             <div class="row">
-                <div class="col is-6">
+                <div class="container col is-6">
 
                     <h3>Links</h3>
                     
@@ -409,7 +413,7 @@
                 </div>
             </div>
         </div>
-        <div>
+        <div class="container">
             <sgds-tab-group variant="tabs-info-toggle" >
                 <sgds-tab disabled slot="nav" panel="one"><svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bank" viewBox="0 0 16 16">
                     <path d="m8 0 6.61 3h.89a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5H15v7a.5.5 0 0 1 .485.38l.5 2a.498.498 0 0 1-.485.62H.5a.498.498 0 0 1-.485-.62l.5-2A.501.501 0 0 1 1 13V6H.5a.5.5 0 0 1-.5-.5v-2A.5.5 0 0 1 .5 3h.89L8 0ZM3.777 3h8.447L8 1 3.777 3ZM2 6v7h1V6H2Zm2 0v7h2.5V6H4Zm3.5 0v7h1V6h-1Zm2 0v7H12V6H9.5ZM13 6v7h1V6h-1Zm2-1V4H1v1h14Zm-.39 9H1.39l-.25 1h13.72l-.25-1Z"/>
