--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,2 +1,3 @@
 <script type="module" id="dev-console-gateway"
   src="https://assets.developer.tech.gov.sg/bundled-scripts/dev-console-gateway.bundle.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
