--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     </sgds-modal>
                 </div>
                 
-                <sgds-progress height="40">
+                <sgds-progress progressClasses="mb-3" height="40">
                     <sgds-progress-bar value="50"></sgds-progress-bar>
                 </sgds-progress>
 
