--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </style>
     <!-- <script src="https://cdn.jsdelivr.net/npm/clk-web-components" type="module"></script> -->
     <script type="module">
-        import "@webcomponents/scoped-custom-element-registry";
+        // import "@webcomponents/scoped-custom-element-registry";
     </script>
     <script type="module">
         let scriptTarget = document.getElementsByTagName( 'head' )[ 0 ]
