--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
 
     <main>
         <div class="container">
+            testinput: <sgds-test-input></sgds-test-input>
             <h2>Progress</h2>
             <div class="row">
                 <div class="container">
