feat(datepicker): range input mask wip

--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
 
             <br><br><br><br><br><br><br><br><br>
             <sgds-datepicker id="myDatepicker2"  mode="range" initialValue='["29/03/2024", "29/03/2025"]'></sgds-datepicker>
+            <sgds-datepicker id="myDatepicker2"  mode="range"></sgds-datepicker>
         </div>
 
         <div class="container">
