--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
     <main>
         <div class="container">
-            <input type="date" name="" id="">
+            <datepicker-input></datepicker-input>  
             <h2>Progress</h2>
             <div class="row">
                 <div class="container">
