test(datepicker): fix failing test

--- a/index.html
+++ b/index.html
@@ -236,11 +236,11 @@
                 </svg> -->
             </sgds-combo-box>
             <h2>Datepicker</h2>
-            <!-- <form id="datepicker-form">
-                <sgds-input></sgds-input>
-                <sgds-datepicker required></sgds-datepicker>
+            <form id="datepicker-form">
+                <sgds-input required></sgds-input>
+                <sgds-datepicker></sgds-datepicker>
                 <sgds-button type="submit">Submit</sgds-button>
-            </form> -->
+            </form>
 
             <sgds-datepicker id="lukhei" label="Birthdate" menuIsOpen initialValue='["20/01/2024"]'>
             </sgds-datepicker>
