--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
                 <div class="container">
                     <h2>Tooltip</h2>
                     Hover me
-                    <sgds-tooltip content="This is a tooltip" placement="bottom">
+                    <sgds-tooltip content="This is a tooltip" placement="top" trigger="click">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-info-circle" viewBox="0 0 16 16">
                             <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
