docs(pagination): add additional docs for first last page

--- a/index.html
+++ b/index.html
@@ -404,6 +404,8 @@
                 <p>ellipsisOn=false, showLastPage=true, showFirstPage=true</p>
                 <sgds-pagination dataLength="2" itemsPerPage="1" currentPage="1" showLastPage
                     showFirstPage></sgds-pagination>
+                test
+                <sgds-pagination dataLength="50" currentPage="4" showFirstPage></sgds-pagination>
             </div>
             <div class="container">
                 <h2>Button</h2>
